[package]
name = "kepler"
version = "0.4.7"
authors = ["Phil Chen <winkpoke@yahoo.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
wasm-bindgen = "~0.2"
js-sys = "~0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "~0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "~0.4.5", optional = true }

# Logging
cfg-if = "~1.0.0"
log = "~0.4"
console_log = {version = "0.2", optional = true}

do-notation = "~0.1.3"

once_cell = "1.17"
nalgebra = "0.32.2"
approx = "0.5.1"
num = "0.4"

# serde = { version = "1.0", features = ["derive"] }
# serde-wasm-bindgen = "0.4"

[dependencies.web-sys]
version = "~0.3.55"
features = [
    'Document',
    'Element',
    'File',
    'FileReader',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGl2RenderingContext',
    'WebGlTexture',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
    "Performance"
]

[dev-dependencies]
wasm-bindgen-test = "~0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
opt-level = 3
